<resources>
    <string name="app_name">Like Birbs</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_start_1_selection">Start_1_selection</string>

    <string name="title_activity_start_2_customize_birb">Start_2_customize_birb</string>

    <string name="title_activity_game">Game</string>

    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_leaderbirb">Leaderbirb</string>

    <string name="title_activity_game_over">Game_over</string>

    <string name="next_gen">NEXT GEN</string>

    <string name="main_menu">MAIN MENU</string>

    <string name="view_logs">VIEW LOGS</string>
    <string name="scores">SCORES</string>
    <string name="credits">CREDITS</string>
    <string name="menu">MENU</string>
    <string name="play">PLAY</string>
    <string name="back">BACK</string>
    <string name="exit">EXIT</string>
    <string name="Developers">DEVELOPERS: </string>
    <string name="names">Jacob Gallucci \nAriel Rupp \nChristian Overton</string>
    <string name="music">MUSIC (Please check them out!)</string>
    <string name="artistssongs">Riddiman - Home \nRiddiman - Serenity \nFresh Air - Zeeky Beats </string>
    <string name="specialthanks">Special Thanks to Dr. Blum!</string>
    <string name="settings">SETTINGS</string>
    <string name="highscores">Highscore Settings</string>
    <string name="multimedia">Multimedia Settings</string>
    <string name="name_hint">Highscore Name</string>
    <string name="highscore_disp">Number of Highscores Shown</string>
    <string name="play_music">Background Music</string>
    <string name="upload_to_db">Submit Scores to Highscore Board</string>
    <string name="customize_lbl_speed">Speed</string>
    <string name="customize_lbl_feather_density">Feather Density</string>
    <string name="customize_lbl_strength">Strength</string>
    <string name="customize_lbl_swimming_strength">Swimming Strength</string>
    <string name="customize_lbl_body_color">Body Color</string>
    <string name="customize_lbl_secondary_color">Secondary Color</string>
    <string name="customize_lbl_strength_num">0%</string>
    <string name="customize_lbl_birbname">Gerold</string>
    <string name="customize_lbl_birbnum">1/10</string>
    <string name="view_death_logs">View Deaths</string>
    <string name="view_birth_logs">View Births</string>
    <string name="view_birbs">View Birb Stats</string>
    <string name="view_event">View Current Event</string>

    <string name="ignore_title">BIRBS IGNORE SHIP</string>
    <string name="ignore_text">The birbs opt to ignore the ship and whatever it may hold</string>
    <string name="ignore_pos">Good</string>
    <string name="ignore_neg">I don\'t like mysteries</string>


    <string name="birbs_join">WANDERING BIRBS</string>
    <string name="birbs_pos">Thank you Based Birb</string>
    <string name="birb_neg">Who are you people?</string>
    <string name="gens">0</string>

    <string name="murber">MURBER BIRB ON THE LOOSE</string>
    <string name="murber_pos">NOOOOOOOOO</string>
    <string name="murber_neg">Eh, I didn\'t like him anyway</string>

    <string name="title_activity_credits">credits</string>

</resources>
