<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title= "@string/highscores">

        <EditTextPreference
            android:defaultValue="Anonymous Birb"
            android:key="username"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="textNoSuggestions"
            android:title="@string/name_hint" />
        <ListPreference
            android:defaultValue="10"
            android:entries="@array/highscores_display"
            android:entryValues="@array/highscores_display"
            android:key="num_scores"
            android:title="@string/highscore_disp" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="upload_score"
            android:title="@string/upload_to_db" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/multimedia">

        <SwitchPreference
            android:defaultValue="true"
            android:key="play_music"
            android:title="@string/play_music" />
    </PreferenceCategory>
</PreferenceScreen>
