<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_meadow"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/playButton"
            android:layout_width="142dp"
            android:layout_height="46dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:backgroundTint="#3F51B5"
            android:backgroundTintMode="add"
            android:onClick="gameClick"
            android:text="@string/play"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/goToScoresButton"
            android:layout_width="142dp"
            android:layout_height="46dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:backgroundTint="#3F51B5"
            android:backgroundTintMode="add"
            android:onClick="gameClick"
            android:text="@string/scores"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="142dp"
            android:layout_height="46dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:backgroundTint="#3F51B5"
            android:backgroundTintMode="add"
            android:onClick="gameClick"
            android:text="@string/settings"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="142dp"
            android:layout_height="46dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:backgroundTint="#3F51B5"
            android:backgroundTintMode="add"
            android:onClick="gameClick"
            android:text="@string/exit"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="187dp"
        android:layout_height="204dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="200dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="77dp"
        android:layout_height="82dp"
        android:layout_marginStart="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="77dp"
        android:layout_height="82dp"
        android:layout_marginStart="156dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="77dp"
        android:layout_height="82dp"
        app:srcCompat="@drawable/birb_the_perfect_birb"
        tools:layout_editor_absoluteX="663dp"
        tools:layout_editor_absoluteY="241dp" />


</androidx.constraintlayout.widget.ConstraintLayout>