<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_desert"
    tools:context=".Game">

    <Button
        android:id="@+id/view_event"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/design_default_color_primary"
        android:backgroundTintMode="add"
        android:fontFamily="@font/roboto_mono_medium"
        android:onClick="gameClick"
        android:text="@string/view_event"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/view_birbs"
        app:layout_constraintTop_toBottomOf="@+id/view_death_logs" />

    <Button
        android:id="@+id/view_birbs"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/design_default_color_primary"
        android:backgroundTintMode="add"
        android:fontFamily="@font/roboto_mono_medium"
        android:onClick="gameClick"
        android:text="@string/view_birbs"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_birth_logs" />

    <Button
        android:id="@+id/view_birth_logs"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/design_default_color_primary"
        android:backgroundTintMode="add"
        android:fontFamily="@font/roboto_mono_medium"
        android:onClick="gameClick"
        android:text="@string/view_birth_logs"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/next_gen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/next_gen"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/view_death_logs"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/design_default_color_primary"
        android:backgroundTintMode="add"
        android:fontFamily="@font/roboto_mono_medium"
        android:onClick="gameClick"
        android:text="@string/view_death_logs"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/next_gen"
        app:layout_constraintStart_toEndOf="@id/view_birth_logs"
        app:layout_constraintTop_toTopOf="@+id/next_gen"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/next_gen"
        android:layout_width="223dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/design_default_color_primary"
        android:backgroundTintMode="add"
        android:fontFamily="@font/roboto_mono_medium"
        android:onClick="gameClick"
        android:text="@string/next_gen"
        android:textColor="#FFFFFF"

        app:layout_constraintStart_toEndOf="@+id/view_death_logs"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_menu"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/design_default_color_primary"
        android:backgroundTintMode="add"
        android:fontFamily="@font/roboto_mono_medium"
        android:onClick="gameClick"
        android:text="@string/main_menu"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/view_death_logs"
        app:layout_constraintStart_toEndOf="@+id/next_gen"
        app:layout_constraintTop_toTopOf="@+id/view_death_logs"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/birb0"
        android:layout_width="66dp"
        android:layout_height="91dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/birb1"
        android:layout_width="66dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/birb0"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/birb2"
        android:layout_width="66dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/birb1"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/birb3"
        android:layout_width="66dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/birb2"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/birb4"
        android:layout_width="66dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/birb3"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/birb5"
        android:layout_width="66dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/birb4"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/birb6"
        android:layout_width="66dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/birb5"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/birb7"
        android:layout_width="66dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/birb6"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/birb8"
        android:layout_width="66dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/birb7"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/birb9"
        android:layout_width="66dp"
        android:layout_height="91dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/birb10"
        app:layout_constraintEnd_toStartOf="@+id/birb10"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/birb10"
        android:layout_width="66dp"
        android:layout_height="91dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/birb11"
        app:layout_constraintEnd_toStartOf="@+id/birb11"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/birb11"
        android:layout_width="66dp"
        android:layout_height="91dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/birb12"
        app:layout_constraintEnd_toStartOf="@+id/birb12"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/birb12"
        android:layout_width="66dp"
        android:layout_height="91dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/birb13"
        app:layout_constraintEnd_toStartOf="@+id/birb13"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <ImageView
        android:id="@+id/birb13"
        android:layout_width="66dp"
        android:layout_height="91dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/birb_the_perfect_birb" />

    <TextView
        android:id="@+id/gencounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_mono_medium"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/main_menu"
        app:layout_constraintTop_toTopOf="@+id/main_menu"
        app:layout_constraintVertical_bias="0.451" />

</androidx.constraintlayout.widget.ConstraintLayout>